--- a/bitcoin.ipynb
+++ b/bitcoin.ipynb
@@ -829,63 +829,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted value: 0    51600.046136\n",
+      "Predicted value: 0    2.688833e+10\n",
       "dtype: float64\n",
-      "Real value: 0    51937.726914\n",
-      "Name: open, dtype: float64\n",
+      "Real value: 0    2.818057e+10\n",
+      "Name: volume, dtype: float64\n",
       "\n",
       "Coefficients of the Regression:\n",
-      "high         1.089454e+00\n",
-      "low          6.424153e-01\n",
-      "close        8.013030e+00\n",
-      "volume      -1.141453e-08\n",
-      "marketCap   -4.467804e-07\n",
-      "index        1.644495e+01\n",
+      "open        -8.726155e+05\n",
+      "high         9.751516e+06\n",
+      "low         -6.930827e+06\n",
+      "close       -2.446136e+08\n",
+      "marketCap    1.241236e+01\n",
+      "index       -5.252830e+08\n",
       "dtype: float64\n",
       "\n",
       "Summary of the OLS model:\n",
       "                                 OLS Regression Results                                \n",
       "=======================================================================================\n",
-      "Dep. Variable:                   open   R-squared (uncentered):                   1.000\n",
-      "Model:                            OLS   Adj. R-squared (uncentered):              1.000\n",
-      "Method:                 Least Squares   F-statistic:                          7.336e+04\n",
-      "Date:                Sun, 18 Feb 2024   Prob (F-statistic):                   1.01e-103\n",
-      "Time:                        22:23:21   Log-Likelihood:                         -456.01\n",
-      "No. Observations:                  60   AIC:                                      924.0\n",
-      "Df Residuals:                      54   BIC:                                      936.6\n",
+      "Dep. Variable:                 volume   R-squared (uncentered):                   0.975\n",
+      "Model:                            OLS   Adj. R-squared (uncentered):              0.973\n",
+      "Method:                 Least Squares   F-statistic:                              355.0\n",
+      "Date:                Sun, 18 Feb 2024   Prob (F-statistic):                    1.59e-41\n",
+      "Time:                        23:08:04   Log-Likelihood:                         -1415.0\n",
+      "No. Observations:                  60   AIC:                                      2842.\n",
+      "Df Residuals:                      54   BIC:                                      2855.\n",
       "Df Model:                           6                                                  \n",
       "Covariance Type:            nonrobust                                                  \n",
       "==============================================================================\n",
       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
       "------------------------------------------------------------------------------\n",
-      "high           1.0895      0.169      6.460      0.000       0.751       1.428\n",
-      "low            0.6424      0.154      4.164      0.000       0.333       0.952\n",
-      "close          8.0130     11.612      0.690      0.493     -15.269      31.295\n",
-      "volume     -1.141e-08   1.55e-08     -0.737      0.464   -4.25e-08    1.96e-08\n",
-      "marketCap  -4.468e-07   5.91e-07     -0.756      0.453   -1.63e-06    7.39e-07\n",
-      "index         16.4450     25.424      0.647      0.520     -34.527      67.417\n",
+      "open       -8.726e+05   1.18e+06     -0.737      0.464   -3.25e+06     1.5e+06\n",
+      "high        9.752e+06   1.45e+06      6.739      0.000    6.85e+06    1.27e+07\n",
+      "low        -6.931e+06   1.23e+06     -5.633      0.000    -9.4e+06   -4.46e+06\n",
+      "close      -2.446e+08   9.64e+07     -2.538      0.014   -4.38e+08   -5.14e+07\n",
+      "marketCap     12.4124      4.915      2.526      0.015       2.559      22.266\n",
+      "index      -5.253e+08   2.11e+08     -2.485      0.016   -9.49e+08   -1.01e+08\n",
       "==============================================================================\n",
-      "Omnibus:                        5.171   Durbin-Watson:                   2.294\n",
-      "Prob(Omnibus):                  0.075   Jarque-Bera (JB):                5.107\n",
-      "Skew:                          -0.359   Prob(JB):                       0.0778\n",
-      "Kurtosis:                       4.236   Cond. No.                     3.65e+11\n",
+      "Omnibus:                        6.014   Durbin-Watson:                   1.846\n",
+      "Prob(Omnibus):                  0.049   Jarque-Bera (JB):                5.042\n",
+      "Skew:                           0.629   Prob(JB):                       0.0804\n",
+      "Kurtosis:                       3.658   Cond. No.                     3.46e+11\n",
       "==============================================================================\n",
       "\n",
       "Notes:\n",
       "[1] R² is computed without centering (uncentered) since the model does not contain a constant.\n",
       "[2] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
-      "[3] The condition number is large, 3.65e+11. This might indicate that there are\n",
+      "[3] The condition number is large, 3.46e+11. This might indicate that there are\n",
       "strong multicollinearity or other numerical problems.\n",
       "\n",
-      "Mean Squared Error: 114028.30776542002\n",
-      "Root Mean Squared Error: 337.68077790336247\n",
+      "Mean Squared Error: 1.669873819522407e+18\n",
+      "Root Mean Squared Error: 1292235976.7172585\n",
       "R-squared (Coefficient of Determination): nan\n"
      ]
     },
@@ -903,12 +903,14 @@
     "# Standardize the features\n",
     "X_standardized = (X - X.mean()) / X.std()\n",
     "\n",
-    "x_train2 = X[1:]  # First row, all columns except the last one\n",
-    "y_train2 = y[1:]   # First row, last column\n",
+    "x_train2 = X[1:]  \n",
+    "y_train2 = y[1:]  \n",
     "\n",
-    "x_test2 = X[:1:]  # From second row till end, all columns except the last one\n",
-    "y_test2 = y[:1:]   # From second row till end, last column\n",
+    "x_test2 = X[:1:] \n",
+    "y_test2 = y[:1:]   \n",
     "\n",
+    "x_test3 = x_train2[:1:] \n",
+    "y_test3 = y_train2[:1:]   \n",
     "\n",
     "\n",
     "# Create and train the linear regression model\n",
@@ -1134,20 +1136,6 @@
     "print(f\"R-squared (Coefficient of Determination): {r2}\") #\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we will test for a logistic regression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
